--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/ertrzyiks/android-blog",
   "dependencies": {
-    "ghost": "^0.5.7"
+    "ghost": "^0.5.7",
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.7.0"
   }
 }
