--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "android-blog",
   "version": "0.0.1",
   "description": "Android blog",
+  "engines": {
+    "node": "~0.10.21"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"no test specified\""
+    "test": "echo \"no test specified\"",
+    "postinstall": "./node_modules/.bin/grunt"
   },
   "repository": {
     "type": "git",
@@ -18,8 +22,10 @@
   },
   "homepage": "https://github.com/ertrzyiks/android-blog",
   "dependencies": {
+    "Ghostium": "git+https://github.com/ertrzyiks/ghostium.git#stp-developers",
     "ghost": "^0.5.7",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.7.0"
   }
 }
