--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "Ghostium": "git+https://github.com/ertrzyiks/ghostium.git#stp-developers",
     "ghost": "^0.5.7",
+    "ghost-s3": "git://github.com/ertrzyiks/ghost-s3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-copy": "^0.7.0"
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-text-replace": "^0.4.0"
   }
 }
