--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-text-replace": "^0.4.0"
+    "grunt-text-replace": "^0.4.0",
+    "htmlencode": "0.0.4"
   }
 }
